--- a/BattleTank/BattleTank/.gitignore
+++ b/BattleTank/BattleTank/.gitignore
@@ -48,6 +48,9 @@
 SourceArt/**/*.png
 SourceArt/**/*.tga
 
+# Starter Content
+Content/StarterContent/
+
 # Binary Files
 Binaries/*
 Plugins/*/Binaries/*
