BT13 User INterface (UI) In Unreal

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 BattleTank/BattleTank/Content/Chris-Folea-MountainRange3.png
 BattleTank/BattleTank/Content/Chris-Folea-MountainRange3.uasset
+BattleTank/BattleTank/Content/Battleground_sharedassets/Chris-Folea-MountainRange3.png
+BattleTank/BattleTank/Content/Battleground_sharedassets/Chris-Folea-MountainRange3.uasset
