BT14 Main Menu Screens + Asset Reorganization

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ BattleTank/BattleTank/Content/Chris-Folea-MountainRange3.png
 BattleTank/BattleTank/Content/Chris-Folea-MountainRange3.uasset
 BattleTank/BattleTank/Content/Battleground_sharedassets/Chris-Folea-MountainRange3.png
 BattleTank/BattleTank/Content/Battleground_sharedassets/Chris-Folea-MountainRange3.uasset
+BattleTank/BattleTank/Content/Battleground_sharedassets/BT17-Firing-M1A1-tank-in-Djibouti.jpg
+BattleTank/BattleTank/Content/Battleground_sharedassets/BT17-Firing-M1A1-tank-in-Djibouti.uasset
+BattleTank/BattleTank/Content/UI/BT17-Firing-M1A1-tank-in-Djibouti.jpg
+BattleTank/BattleTank/Content/UI/BT17-Firing-M1A1-tank-in-Djibouti.uasset
