--- a/BattleTank/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/BattleTank/Config/DefaultInput.ini
@@ -53,6 +53,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=S,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
