--- a/BattleTank/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/BattleTank/Config/DefaultInput.ini
@@ -55,6 +55,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Fly-ByWire Forwards/Backwards",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Fly-By-Wire Turn Right/Left",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Fly-By-Wire Turn Right/Left",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="Fly-By-Wire Turn Right/Left",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
