BT55 Finalising Your Class Code

--- a/BattleTank/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9EB149C8489DA57FD66BEF87E3F45241
+CopyrightNotice=I ain't got no copyright
+
